# boxman

./: .clang-format  CMakeLists.txt  Crate.cpp  Crate.h  Errors.cpp  Game.cpp  Game.h  Level.cpp  Level.h  Renderer.cpp  Renderer.h  Spritesheet.cpp  Spritesheet.h  State.h  Texture.cpp  Texture.h  Window.cpp  Window.h  errors.cpp  errors.h  gameobject.cpp  gameobject.h  level.cpp  level.h  main.cpp  spritesheet.cpp  spritesheet.h  state.h  texture.cpp  texture.h  window.cpp  window.h
GameObjects/: Crate.cpp  Crate.h  GameObject.cpp  GameObject.h  Moveable.cpp  Moveable.h  Obstacle.h  Player.cpp  Player.h  Target.cpp  Target.h
levels/: 1.json  2.json  3.json
